style.css
:root {
  --device: 223, 86, 22;
  --s1mple: 0, 185, 191
}

html {
  display: table;
  margin: auto;
  scroll-behavior: smooth;
}

body {
  font-family: "Exo 2";
  background-color: #0b0e13;
  color: white;
}

.header-div {
  display: flex;
  font: normal normal 900 30px "Exo 2"; 
  text-align: center;
  align-items: center;
  margin-left: 180px;
  position: relative;
  top: 20px;
  z-index: -1;
}

.s1-header {
  margin-right: 15px;
}

.header-div img {
  max-width: 200px;
  max-height: 200px;
}

.all-lan {
  background-color: #333333;
  max-width: 800px;
  text-align: center;
  padding: 0px 50px 30px 50px;
  border-radius: 20px 0px;
}

.all-lan h2 {
  padding-top: 8px;
}

h3,
ul.comp-stat {
  font-weight: 100;
  background-color: #444444;
  padding: 3px;
  margin: 1px;
}

h3 {
  font-weight: 400;
}

.stats-div {
  display: flex;
  justify-content: center;
  margin: auto;
}

.each-div {
  margin: 1px;
}

.stats-block {
  display: flex;
  padding-left: 0px;
}

.s1-div .stats-block {
  flex-direction: row-reverse;
}

.li-stats {
  display: flex;
  flex-direction: column;
  margin: 0.5px;
  height: 65px;
  justify-content: center;
}

.number {
  font-weight: 900;
  margin-top: auto;
}

.mvp .number {
  font-size: 2.8rem;
}

.lans-won .number {
  font-size: 2.4rem;
}

.lans-played .number {
  font-size: 1.9rem;
}

.stats-text {
  font-size: 0.8rem;
}

.lans-played .stats-text {
  margin-top: 5px;
}

.mvp .stats-text {
  position: relative;
  bottom: 2px;
}

.s1-stats {
  color: rgba(0, 185, 191, 1);
}

.mvp {
  padding: 10px 40px;
  width: 80px;
}

.lans-won {
  padding: 10px 30px;
  width: 60px;
}

.lans-played {
  padding: 10px 20px;
  width: 40px;
}

.s1-div .mvp {
  background-color: rgba(var(--s1mple), 1);
}

.s1-div .lans-won {
  background-color: rgba(var(--s1mple), 0.7);
}

.s1-div .lans-played {
  background-color: rgba(var(--s1mple), 0.4);
}

.dev-stats {
  color: rgb(var(--device));
}

.dev-div .mvp {
  background-color: rgba(var(--device), 1);
}

.dev-div .lans-won {
  background-color: rgba(var(--device), 0.7);
}

.dev-div .lans-played {
  background-color: rgba(var(--device), 0.4);
}

.major-win:before {
  content: "🏆";
  margin-right: 3px;
}

.major-mvp::before {
  content: url(https://www.hltv.org/img/static/event/mvp.png);
  zoom: 0.1;
  position: relative;
  top: 30px;
  margin-right: 35px;
}

.major-mvp {
  padding-bottom: 5px !important;
}

.btn {
  background-color: #ffd600;
  cursor: pointer;
  border: 0px;
  transition: 0.5s;
  padding: 10px 20px;
}

.more-stats {
  font: normal normal 700 15px "Exo 2";  margin-top: 1.5rem;
  margin-bottom: 0;
  border-radius: 9999px;
}

.more-stats:hover {
  background-color: #ffde33;
  transform: scale(1.05);
}

.popup {
  display: none;
  position: absolute;
  top: 10px;
  right: 0;
  width: 100%;
  height: 95vh;
  color: black;
  justify-content: center;
  align-items: center;
  z-index: 3
}

.popup-overlay {
  display: none;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  height: 100%;
  width: 100%;
  position: absolute;
  z-index: 2
}

.main-popup {
  position: absolute;
  height: 100%;
  width: 70%;
  background-color: rgba(255,255,255,.95);
  padding: 30px 20px;
  display: flex;
  justify-content: center;
  transform: translateY(100%);
  overflow-y: auto !important;
  overflow-x: hidden !important;
}

@media screen and (min-width: 1600px) {
  body {
    overflow-y: hidden !important
  }

  .popup {
    top: 15vh !important;
    height: 70vh !important;
  }

  .details-title {
    top:-30px !important;
    bottom: 30px !important
  }

  .close-btn {
    top: 0px !important
  }
}

@media screen and (max-width: 1000px) {
   .popup {
    top: 12.5vh !important;
    height: 67vh !important;
  }

  .details-title {
    top:-30px !important;
  }

  .close-btn {
    top: 0px !important
  }
}

.close-btn {
  position: absolute;
  top: 20px;
  right: 0;
  text-transform: uppercase;
  z-index: 999;
}

.close-btn:hover {
  background-color: #e9c202;
}

.details-title {
  display: flex;
  justify-content: space-evenly;
  box-shadow: 0px 2px 30px 3px rgba(0, 0, 0, 0.1);
  width: 100%;
  position: relative;
  top: -10px;
  padding: 20px;
  right: 20px
}

.popup h3,
.popup h2 {
  background: none;
  top: 0;
  margin-top: 20px;
  padding: 0px;
}

.details-list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.details-list-container {
  padding: 0px 25px;
}

.details-list h4 {
  text-transform: uppercase;
  margin-block-end: 0;
  background-color: rgba(0, 0, 0, 0.1);
  padding: 5px 0px;
  cursor: default
}

.details-list ul {
  display: flex;  
  margin-block-start: 0;
  padding: 0px;
}

.details-list li {
  list-style-type: none;
  padding: 17px 20px 35px;
  width: 70px;
  height: 36px;
  color: white;
  font-size: 30px;
  font-weight: 900;
}

.s1-detailed-stat {
  background-color: rgba(var(--s1mple), 0.7);
}

.dev-detailed-stat {
  background-color: rgba(var(--device), 1);
}

.five-dig {
  font-size: 25px !important;
}

.s1-detailed-stat::after,
.dev-detailed-stat::after {
  font-size: 15px;
  position: relative;
  top: 2px;
  background-color: rgba(255, 255, 255, 0.6);
  color: rgba(0, 0, 0, 0.7);
  font-weight: 100;
}

.s1-detailed-stat::after {
  content: "\a\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0s1mple\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
  right: 22px;
}

.dev-detailed-stat::after {
  content: "\a\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0 device\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
  right: 20px;
}

.five-dig::after {
  top: 14px;
}

@keyframes slide-in {
  0% {
    transform: translateY(100%);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes slide-out {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(100%);
  }
}

@keyframes slide-out200 {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(200%);
  }
}

